// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ground combat — all units sets > 2I vs 2I 1`] = `
[
  {
    "attacker": "",
    "defender": "2I",
    "probability": 0.2051946273,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "I",
    "probability": 0.2582998166,
    "winner": "defender",
  },
  {
    "attacker": "I",
    "defender": "",
    "probability": 0.2582998166,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0730111123,
    "winner": "draw",
  },
  {
    "attacker": "2I",
    "defender": "",
    "probability": 0.2051946273,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2I, 2PDS vs 2I, 2PDS 1`] = `
[
  {
    "attacker": "",
    "defender": "2I",
    "probability": 0.5729881545,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "I",
    "probability": 0.2270783117,
    "winner": "defender",
  },
  {
    "attacker": "I",
    "defender": "",
    "probability": 0.1106399555,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0379949215,
    "winner": "draw",
  },
  {
    "attacker": "2I",
    "defender": "",
    "probability": 0.0512986568,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2M vs 2M 1`] = `
[
  {
    "attacker": "",
    "defender": "2M",
    "probability": 0.0142645503,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M, M-",
    "probability": 0.0754261527,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-",
    "probability": 0.1724660289,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M-",
    "probability": 0.1956636543,
    "winner": "defender",
  },
  {
    "attacker": "M-",
    "defender": "",
    "probability": 0.1956636543,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0843592278,
    "winner": "draw",
  },
  {
    "attacker": "2M-",
    "defender": "",
    "probability": 0.1724660289,
    "winner": "attacker",
  },
  {
    "attacker": "M, M-",
    "defender": "",
    "probability": 0.0754261527,
    "winner": "attacker",
  },
  {
    "attacker": "2M",
    "defender": "",
    "probability": 0.0142645503,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2M, 2I vs 2M, 2I 1`] = `
[
  {
    "attacker": "",
    "defender": "2M, 2I",
    "probability": 0.0032115197,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M, M-, 2I",
    "probability": 0.0215603994,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-, 2I",
    "probability": 0.0665110415,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-, I",
    "probability": 0.1200441989,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-",
    "probability": 0.1448153587,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M-",
    "probability": 0.1202160951,
    "winner": "defender",
  },
  {
    "attacker": "M-",
    "defender": "",
    "probability": 0.1202160951,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0472827734,
    "winner": "draw",
  },
  {
    "attacker": "2M-",
    "defender": "",
    "probability": 0.1448153587,
    "winner": "attacker",
  },
  {
    "attacker": "2M-, I",
    "defender": "",
    "probability": 0.1200441989,
    "winner": "attacker",
  },
  {
    "attacker": "2M-, 2I",
    "defender": "",
    "probability": 0.0665110415,
    "winner": "attacker",
  },
  {
    "attacker": "M, M-, 2I",
    "defender": "",
    "probability": 0.0215603994,
    "winner": "attacker",
  },
  {
    "attacker": "2M, 2I",
    "defender": "",
    "probability": 0.0032115197,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2M, 2I, 2PDS vs 2M, 2I, 2PDS 1`] = `
[
  {
    "attacker": "",
    "defender": "2M, 2I",
    "probability": 0.0108177646,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M, M-, 2I",
    "probability": 0.0558601986,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-, 2I",
    "probability": 0.1305208602,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-, I",
    "probability": 0.1807421476,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-",
    "probability": 0.1708106193,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M-",
    "probability": 0.1169489983,
    "winner": "defender",
  },
  {
    "attacker": "M-",
    "defender": "",
    "probability": 0.0955410943,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0414021004,
    "winner": "draw",
  },
  {
    "attacker": "2M-",
    "defender": "",
    "probability": 0.0967338854,
    "winner": "attacker",
  },
  {
    "attacker": "2M-, I",
    "defender": "",
    "probability": 0.0646127517,
    "winner": "attacker",
  },
  {
    "attacker": "2M-, 2I",
    "defender": "",
    "probability": 0.02821084,
    "winner": "attacker",
  },
  {
    "attacker": "M, M-, 2I",
    "defender": "",
    "probability": 0.0069958597,
    "winner": "attacker",
  },
  {
    "attacker": "2M, 2I",
    "defender": "",
    "probability": 0.0008028799,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2M, 2PDS vs 2M, 2PDS 1`] = `
[
  {
    "attacker": "",
    "defender": "2M",
    "probability": 0.0570582011,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M, M-",
    "probability": 0.1875882086,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "2M-",
    "probability": 0.2576294972,
    "winner": "defender",
  },
  {
    "attacker": "",
    "defender": "M-",
    "probability": 0.191999785,
    "winner": "defender",
  },
  {
    "attacker": "M-",
    "defender": "",
    "probability": 0.1268733408,
    "winner": "attacker",
  },
  {
    "attacker": "",
    "defender": "",
    "probability": 0.0649002954,
    "winner": "draw",
  },
  {
    "attacker": "2M-",
    "defender": "",
    "probability": 0.0843957211,
    "winner": "attacker",
  },
  {
    "attacker": "M, M-",
    "defender": "",
    "probability": 0.0259888133,
    "winner": "attacker",
  },
  {
    "attacker": "2M",
    "defender": "",
    "probability": 0.0035661376,
    "winner": "attacker",
  },
]
`;

exports[`ground combat — all units sets > 2PDS vs 2PDS 1`] = `
[
  {
    "attacker": "",
    "defender": "",
    "probability": 1,
    "winner": "draw",
  },
]
`;
